--- a/style.css
+++ b/style.css
@@ -81,3 +81,22 @@ ul li.active a{
   background-color: #fff;
   color: #000;
 }
+
+.content{
+  width: 100%;
+  position: absolute;
+  top: 30%;
+}
+
+.right-col{
+  float: right;
+  margin-right: 6%;
+  margin-top: 120px;
+  display: flex;
+  align-items: center;
+}
+
+#icon{
+  width: 80px;
+  cursor: pointer;
+}
